# uvc_app

./: CMakeLists.txt  camera2uvc.c  main.c  mpp_enc_cfg.conf  uvc_MJPEG.sh  uvc_config.sh
doc/zh-cn/: Rockchip_Introduction_Linux_UVCApp_CN.md  uvc_app.md
process/: camera_control.cpp  camera_control.h  camera_pu_control.cpp  eptz_control.cpp  eptz_control.h  zoom_control.cpp
uvc/: drm.c  mpi_enc.c  mpi_enc.h  mpp_osd.c  mpp_osd.h  uevent.c  uvc-gadget.c  uvc-gadget.h  uvc_configfs.c  uvc_control.c  uvc_control.h  uvc_encode.cpp  uvc_encode.h  uvc_ipc.cpp  uvc_ipc.h  uvc_ipc_ext.h  uvc_log.h  uvc_video.cpp  uvc_video.h
